--- a/VEDA-1/VEDA1.ui
+++ b/VEDA-1/VEDA1.ui
@@ -2732,7 +2732,7 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
           <bool>false</bool>
          </property>
          <property name="sortingEnabled">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <property name="wordWrap">
           <bool>false</bool>
