--- a/VEDA-1/VEDA1.ui
+++ b/VEDA-1/VEDA1.ui
@@ -33,7 +33,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -3329,7 +3329,7 @@ QPushButton:hover{
           <string notr="true"/>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>1</number>
          </property>
          <widget class="QWidget" name="data">
           <attribute name="title">
@@ -3999,7 +3999,7 @@ background-color: rgba(163, 236, 90, 150);
             <rect>
              <x>30</x>
              <y>25</y>
-             <width>341</width>
+             <width>236</width>
              <height>96</height>
             </rect>
            </property>
@@ -4037,41 +4037,12 @@ background-color: transparent;</string>
              <string>Тип процесса</string>
             </property>
            </widget>
-           <widget class="QPushButton" name="addData_2">
-            <property name="geometry">
-             <rect>
-              <x>15</x>
-              <y>58</y>
-              <width>101</width>
-              <height>26</height>
-             </rect>
-            </property>
-            <property name="font">
-             <font>
-              <family>Inter V</family>
-              <pointsize>12</pointsize>
-             </font>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">QPushButton{
-background-color: rgb(163, 236, 90);
-color: black;
-border-radius: 13px;
-}
-QPushButton:hover{
-background-color: rgba(163, 236, 90, 150);
-}</string>
-            </property>
-            <property name="text">
-             <string>Изменить</string>
-            </property>
-           </widget>
            <widget class="QComboBox" name="comboExpType">
             <property name="geometry">
              <rect>
-              <x>160</x>
-              <y>25</y>
-              <width>156</width>
+              <x>35</x>
+              <y>35</y>
+              <width>171</width>
               <height>41</height>
              </rect>
             </property>
@@ -4102,6 +4073,28 @@ QComboBox::drop-down {
 QComboBox::down-arrow {
         border-radius: 6px;
 	background-color: rgb(163, 236, 90);
+}
+
+QComboBox QAbstractItemView {
+	background-color: rgb(22, 25, 26);
+	text-align:center;
+}
+
+QComboBox QAbstractItemView:item {
+	background-color: rgb(22, 25, 26);
+    border-top-width: 1px;
+    border-top-color: darkgray;
+    border-top-style: solid; 
+    selection-background-color: lightgray;
+	text-align:center;
+	margin-top: 5px;
+margin-left: 5px;
+margin-right: 5px;
+	padding-left: 25px;
+}
+
+QComboBox QAbstractItemView:item:hover {
+	background-color: rgba(163, 236, 90, 50);
 }</string>
             </property>
             <property name="editable">
@@ -4158,41 +4151,12 @@ background-color: transparent;</string>
              <string>Материал</string>
             </property>
            </widget>
-           <widget class="QPushButton" name="addData_3">
-            <property name="geometry">
-             <rect>
-              <x>15</x>
-              <y>58</y>
-              <width>101</width>
-              <height>26</height>
-             </rect>
-            </property>
-            <property name="font">
-             <font>
-              <family>Inter V</family>
-              <pointsize>12</pointsize>
-             </font>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">QPushButton{
-background-color: rgb(163, 236, 90);
-color: black;
-border-radius: 13px;
-}
-QPushButton:hover{
-background-color: rgba(163, 236, 90, 150);
-}</string>
-            </property>
-            <property name="text">
-             <string>Изменить</string>
-            </property>
-           </widget>
            <widget class="QLineEdit" name="materialExp">
             <property name="geometry">
              <rect>
-              <x>160</x>
-              <y>30</y>
-              <width>316</width>
+              <x>35</x>
+              <y>35</y>
+              <width>431</width>
               <height>41</height>
              </rect>
             </property>
@@ -4211,7 +4175,7 @@ color: White;</string>
           <widget class="QPushButton" name="deleteExp">
            <property name="geometry">
             <rect>
-             <x>195</x>
+             <x>315</x>
              <y>515</y>
              <width>181</width>
              <height>30</height>
@@ -4238,6 +4202,165 @@ QPushButton:hover{
            <property name="text">
             <string>Удалить эксперимент</string>
            </property>
+          </widget>
+          <widget class="QFrame" name="frame_18">
+           <property name="geometry">
+            <rect>
+             <x>30</x>
+             <y>255</y>
+             <width>501</width>
+             <height>96</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(43, 47, 50);
+color: white;</string>
+           </property>
+           <property name="frameShape">
+            <enum>QFrame::StyledPanel</enum>
+           </property>
+           <property name="frameShadow">
+            <enum>QFrame::Raised</enum>
+           </property>
+           <widget class="QLabel" name="label_55">
+            <property name="geometry">
+             <rect>
+              <x>15</x>
+              <y>5</y>
+              <width>206</width>
+              <height>26</height>
+             </rect>
+            </property>
+            <property name="font">
+             <font>
+              <family>Inter V</family>
+              <pointsize>12</pointsize>
+              <bold>true</bold>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">color: rgb(255, 255, 255);
+background-color: transparent;</string>
+            </property>
+            <property name="text">
+             <string>Название</string>
+            </property>
+           </widget>
+           <widget class="QLineEdit" name="nameExp">
+            <property name="geometry">
+             <rect>
+              <x>35</x>
+              <y>35</y>
+              <width>431</width>
+              <height>41</height>
+             </rect>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(22, 25, 26);
+color: White;</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+            <property name="placeholderText">
+             <string>*нет названия*</string>
+            </property>
+           </widget>
+          </widget>
+          <widget class="QPushButton" name="expEdit">
+           <property name="geometry">
+            <rect>
+             <x>95</x>
+             <y>515</y>
+             <width>191</width>
+             <height>30</height>
+            </rect>
+           </property>
+           <property name="font">
+            <font>
+             <family>Inter V</family>
+             <pointsize>12</pointsize>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QPushButton{
+	background-color: 	rgba(163, 236, 90, 50);
+	border: 1px solid rgb(54, 59, 62);
+border-radius: 15px;
+color: rgb(212, 212, 212);
+}
+QPushButton:hover{
+	background-color:rgba(163, 236, 90, 150);
+}</string>
+           </property>
+           <property name="text">
+            <string>Изменить</string>
+           </property>
+          </widget>
+          <widget class="QFrame" name="frame_19">
+           <property name="geometry">
+            <rect>
+             <x>290</x>
+             <y>25</y>
+             <width>241</width>
+             <height>96</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(43, 47, 50);
+color: white;</string>
+           </property>
+           <property name="frameShape">
+            <enum>QFrame::StyledPanel</enum>
+           </property>
+           <property name="frameShadow">
+            <enum>QFrame::Raised</enum>
+           </property>
+           <widget class="QLabel" name="label_57">
+            <property name="geometry">
+             <rect>
+              <x>15</x>
+              <y>5</y>
+              <width>206</width>
+              <height>26</height>
+             </rect>
+            </property>
+            <property name="font">
+             <font>
+              <family>Inter V</family>
+              <pointsize>12</pointsize>
+              <bold>true</bold>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">color: rgb(255, 255, 255);
+background-color: transparent;</string>
+            </property>
+            <property name="text">
+             <string>Дата</string>
+            </property>
+           </widget>
+           <widget class="QDateEdit" name="dateEdit">
+            <property name="geometry">
+             <rect>
+              <x>35</x>
+              <y>35</y>
+              <width>171</width>
+              <height>41</height>
+             </rect>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(22, 25, 26);
+color: White;</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+            <property name="buttonSymbols">
+             <enum>QAbstractSpinBox::NoButtons</enum>
+            </property>
+           </widget>
           </widget>
          </widget>
         </widget>
