--- a/VEDA-1/VEDA1.ui
+++ b/VEDA-1/VEDA1.ui
@@ -2333,7 +2333,7 @@ border: none;
 }</string>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="admin">
        <attribute name="title">
@@ -3329,7 +3329,7 @@ QPushButton:hover{
           <string notr="true"/>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="data">
           <attribute name="title">
@@ -4498,7 +4498,7 @@ background-color: transparent;</string>
           <string>Телефон</string>
          </property>
         </widget>
-        <widget class="QLineEdit" name="lineEdit">
+        <widget class="QLineEdit" name="nameS">
          <property name="geometry">
           <rect>
            <x>130</x>
@@ -4542,7 +4542,7 @@ border: none;</string>
           <string>ФИО</string>
          </property>
         </widget>
-        <widget class="QLineEdit" name="lineEdit_2">
+        <widget class="QLineEdit" name="emailS">
          <property name="geometry">
           <rect>
            <x>130</x>
@@ -4560,8 +4560,11 @@ color: White;</string>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
          </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
         </widget>
-        <widget class="QLineEdit" name="lineEdit_3">
+        <widget class="QLineEdit" name="phoneS">
          <property name="geometry">
           <rect>
            <x>130</x>
@@ -4603,7 +4606,7 @@ border-radius: 63px;</string>
           <bool>true</bool>
          </property>
         </widget>
-        <widget class="QPushButton" name="dataChange_2">
+        <widget class="QPushButton" name="userSave">
          <property name="geometry">
           <rect>
            <x>190</x>
@@ -4634,7 +4637,7 @@ QPushButton:hover{
           <string>Сохранить</string>
          </property>
         </widget>
-        <widget class="QLineEdit" name="lineEdit_4">
+        <widget class="QLineEdit" name="passwordS">
          <property name="geometry">
           <rect>
            <x>130</x>
@@ -4769,6 +4772,37 @@ border: none;</string>
          </property>
          <property name="text">
           <string>Уведомления</string>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="exitUser">
+         <property name="geometry">
+          <rect>
+           <x>95</x>
+           <y>580</y>
+           <width>181</width>
+           <height>30</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Inter V</family>
+           <pointsize>10</pointsize>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+	background-color: rgba(242, 54, 54, 50);
+	border: 1px solid rgb(54, 59, 62);
+border-radius: 15px;
+color: rgb(212, 212, 212);
+}
+QPushButton:hover{
+	background-color: rgba(242, 54, 54, 150);
+}</string>
+         </property>
+         <property name="text">
+          <string>Выйти</string>
          </property>
         </widget>
        </widget>
