fix / Отрисовка времени статей с учетом старости

--- a/VEDA-1/VEDA1.qrc
+++ b/VEDA-1/VEDA1.qrc
@@ -1,6 +1,8 @@
 <RCC>
   <qresource prefix="VEDA1"/>
   <qresource prefix="icons">
+    <file>icons/article.png</file>
+    <file>icons/article_fill.png</file>
     <file>icons/crown.png</file>
     <file>icons/test_avatar.png</file>
     <file>icons/admin_fill.png</file>
