--- a/VEDA-1/VEDA1.qrc
+++ b/VEDA-1/VEDA1.qrc
@@ -1,6 +1,9 @@
 <RCC>
   <qresource prefix="VEDA1"/>
   <qresource prefix="icons">
+    <file>icons/MMB.png</file>
+    <file>icons/RMB.png</file>
+    <file>icons/LMB.png</file>
     <file>icons/article.png</file>
     <file>icons/article_fill.png</file>
     <file>icons/crown.png</file>
