design / Настройки окно

--- a/VEDA-1/VEDA1.qrc
+++ b/VEDA-1/VEDA1.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource prefix="VEDA1"/>
   <qresource prefix="icons">
+    <file>icons/icon.ico</file>
     <file>icons/big_logo.png</file>
     <file>icons/MMB.png</file>
     <file>icons/RMB.png</file>
