--- a/VEDA-1/VEDA1.ui
+++ b/VEDA-1/VEDA1.ui
@@ -10,11 +10,28 @@
     <height>747</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1046</width>
+    <height>747</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1046</width>
+    <height>747</height>
+   </size>
+  </property>
   <property name="sizeIncrement">
    <size>
     <width>0</width>
     <height>0</height>
    </size>
+  </property>
+  <property name="font">
+   <font>
+    <family>Inter V</family>
+   </font>
   </property>
   <property name="mouseTracking">
    <bool>true</bool>
@@ -23,7 +40,11 @@
    <bool>false</bool>
   </property>
   <property name="windowTitle">
-   <string>VEDA1</string>
+   <string>ВЕДА-1</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="VEDA1.qrc">
+    <normaloff>:/icons/icons/icon.ico</normaloff>:/icons/icons/icon.ico</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: #16191A;</string>
@@ -365,10 +386,10 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
         <number>100</number>
        </property>
        <property name="singleStep">
-        <number>1</number>
+        <number>20</number>
        </property>
        <property name="pageStep">
-        <number>1</number>
+        <number>20</number>
        </property>
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -402,10 +423,10 @@ border-radius: 27px</string>
        <widget class="QLabel" name="label_25">
         <property name="geometry">
          <rect>
-          <x>4</x>
-          <y>10</y>
-          <width>45</width>
-          <height>40</height>
+          <x>0</x>
+          <y>0</y>
+          <width>54</width>
+          <height>54</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -416,7 +437,7 @@ background-color: none;</string>
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="VEDA1.qrc">:/icons/icons/logo.png</pixmap>
+         <pixmap resource="VEDA1.qrc">:/icons/icons/icon.ico</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
@@ -1621,10 +1642,10 @@ border-radius: 27px</string>
       <widget class="QLabel" name="label_27">
        <property name="geometry">
         <rect>
-         <x>4</x>
-         <y>10</y>
-         <width>45</width>
-         <height>40</height>
+         <x>0</x>
+         <y>0</y>
+         <width>54</width>
+         <height>54</height>
         </rect>
        </property>
        <property name="styleSheet">
@@ -1635,7 +1656,7 @@ background-color: none;</string>
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="VEDA1.qrc">:/icons/icons/logo.png</pixmap>
+        <pixmap resource="VEDA1.qrc">:/icons/icons/icon.ico</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
