--- a/VEDA-1/VEDA1.ui
+++ b/VEDA-1/VEDA1.ui
@@ -2360,7 +2360,7 @@ border: none;
 }</string>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="admin">
        <attribute name="title">
@@ -2494,7 +2494,7 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
           </layout>
          </widget>
         </widget>
-        <widget class="QPushButton" name="add_member_2">
+        <widget class="QPushButton" name="add_member_server">
          <property name="geometry">
           <rect>
            <x>20</x>
@@ -2570,7 +2570,7 @@ background-color: transparent;</string>
           <string>Админ</string>
          </property>
         </widget>
-        <widget class="QPushButton" name="dataChange_3">
+        <widget class="QPushButton" name="admin_save">
          <property name="geometry">
           <rect>
            <x>195</x>
@@ -2599,6 +2599,184 @@ QPushButton:hover{
          </property>
          <property name="text">
           <string>Сохранить</string>
+         </property>
+        </widget>
+       </widget>
+       <widget class="QPushButton" name="helpBt2">
+        <property name="geometry">
+         <rect>
+          <x>925</x>
+          <y>15</y>
+          <width>24</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>Inter V</family>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="cursor">
+         <cursorShape>WhatsThisCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">*{
+border-radius: 12px;
+border: 1px solid rgb(212, 212, 212);
+color: rgb(212, 212, 212);
+}
+*:hover{
+	background-color: rgba(212, 212, 212, 50);
+}</string>
+        </property>
+        <property name="text">
+         <string>?</string>
+        </property>
+       </widget>
+       <widget class="QFrame" name="helpBtPanel2">
+        <property name="geometry">
+         <rect>
+          <x>630</x>
+          <y>40</y>
+          <width>311</width>
+          <height>0</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">border-radius: 30px;
+background-color: rgb(58, 58, 58);</string>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Raised</enum>
+        </property>
+        <widget class="QLabel" name="label_23">
+         <property name="geometry">
+          <rect>
+           <x>25</x>
+           <y>25</y>
+           <width>40</width>
+           <height>55</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="pixmap">
+          <pixmap resource="VEDA1.qrc">:/icons/icons/LMB.png</pixmap>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_31">
+         <property name="geometry">
+          <rect>
+           <x>25</x>
+           <y>115</y>
+           <width>40</width>
+           <height>55</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="pixmap">
+          <pixmap resource="VEDA1.qrc">:/icons/icons/RMB.png</pixmap>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_32">
+         <property name="geometry">
+          <rect>
+           <x>25</x>
+           <y>205</y>
+           <width>40</width>
+           <height>55</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="pixmap">
+          <pixmap resource="VEDA1.qrc">:/icons/icons/MMB.png</pixmap>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_33">
+         <property name="geometry">
+          <rect>
+           <x>85</x>
+           <y>25</y>
+           <width>161</width>
+           <height>46</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Inter V</family>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);</string>
+         </property>
+         <property name="text">
+          <string>- ЛКМ просмотр профиля</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_34">
+         <property name="geometry">
+          <rect>
+           <x>85</x>
+           <y>115</y>
+           <width>161</width>
+           <height>46</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Inter V</family>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);</string>
+         </property>
+         <property name="text">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;- ПКМ удаление пользователя из системы&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_68">
+         <property name="geometry">
+          <rect>
+           <x>85</x>
+           <y>200</y>
+           <width>161</width>
+           <height>61</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Inter V</family>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);</string>
+         </property>
+         <property name="text">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;- СКМ сброс пароля пользователя (одноразовый прийдет на почту)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
          </property>
         </widget>
        </widget>
@@ -3356,7 +3534,7 @@ QPushButton:hover{
           <string notr="true"/>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="data">
           <attribute name="title">
@@ -4594,9 +4772,14 @@ background-color: rgb(58, 58, 58);</string>
          <cursorShape>WhatsThisCursor</cursorShape>
         </property>
         <property name="styleSheet">
-         <string notr="true">border-radius: 12px;
+         <string notr="true">*{
+border-radius: 12px;
 border: 1px solid rgb(212, 212, 212);
-color: rgb(212, 212, 212);</string>
+color: rgb(212, 212, 212);
+}
+*:hover{
+	background-color: rgba(212, 212, 212, 50);
+}</string>
         </property>
         <property name="text">
          <string>?</string>
