--- a/VEDA-1/VEDA1.ui
+++ b/VEDA-1/VEDA1.ui
@@ -5976,7 +5976,7 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
  <layoutdefault spacing="6" margin="11"/>
  <resources>
   <include location="VEDA1.qrc"/>
-  <include location="C:/Users/Кирик/.designer/backup/VEDA1.qrc"/>
+  <include location="VEDA1.qrc"/>
  </resources>
  <connections/>
  <designerdata>
