--- a/VEDA-1/VEDA1.ui
+++ b/VEDA-1/VEDA1.ui
@@ -761,13 +761,13 @@ border-radius: 20px</string>
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
-        <widget class="QLabel" name="label_14">
+        <widget class="QLabel" name="user_ico">
          <property name="geometry">
           <rect>
-           <x>7</x>
-           <y>7</y>
-           <width>25</width>
-           <height>25</height>
+           <x>0</x>
+           <y>0</y>
+           <width>40</width>
+           <height>40</height>
           </rect>
          </property>
          <property name="text">
@@ -1830,13 +1830,13 @@ border-radius: 20px</string>
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
-       <widget class="QLabel" name="label_21">
+       <widget class="QLabel" name="user_ico2">
         <property name="geometry">
          <rect>
-          <x>7</x>
-          <y>7</y>
-          <width>25</width>
-          <height>25</height>
+          <x>0</x>
+          <y>0</y>
+          <width>40</width>
+          <height>40</height>
          </rect>
         </property>
         <property name="text">
@@ -2364,7 +2364,7 @@ border: none;
 }</string>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="admin">
        <attribute name="title">
@@ -4982,29 +4982,6 @@ color: White;</string>
           <set>Qt::AlignCenter</set>
          </property>
         </widget>
-        <widget class="QLabel" name="label_9">
-         <property name="geometry">
-          <rect>
-           <x>410</x>
-           <y>75</y>
-           <width>126</width>
-           <height>126</height>
-          </rect>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(22, 25, 26);
-border-radius: 63px;</string>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="pixmap">
-          <pixmap resource="VEDA1.qrc">:/icons/icons/test_avatar.png</pixmap>
-         </property>
-         <property name="scaledContents">
-          <bool>true</bool>
-         </property>
-        </widget>
         <widget class="QPushButton" name="userSave">
          <property name="geometry">
           <rect>
@@ -5109,6 +5086,39 @@ background-color: transparent;</string>
           <set>Qt::AlignCenter</set>
          </property>
         </widget>
+        <widget class="QPushButton" name="user_ico_bt">
+         <property name="geometry">
+          <rect>
+           <x>410</x>
+           <y>70</y>
+           <width>126</width>
+           <height>126</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">border-radius: 63px;
+background-color: rgb(255, 255, 255);</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="VEDA1.qrc">
+           <normaloff>:/icons/icons/test_avatar.png</normaloff>:/icons/icons/test_avatar.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>126</width>
+           <height>126</height>
+          </size>
+         </property>
+         <property name="autoRepeat">
+          <bool>false</bool>
+         </property>
+         <property name="flat">
+          <bool>true</bool>
+         </property>
+        </widget>
         <zorder>label_48</zorder>
         <zorder>label_50</zorder>
         <zorder>label_51</zorder>
@@ -5116,11 +5126,11 @@ background-color: transparent;</string>
         <zorder>label_49</zorder>
         <zorder>emailS</zorder>
         <zorder>phoneS</zorder>
-        <zorder>label_9</zorder>
         <zorder>userSave</zorder>
         <zorder>label_53</zorder>
         <zorder>password_lvl</zorder>
         <zorder>passwordS</zorder>
+        <zorder>user_ico_bt</zorder>
        </widget>
        <widget class="QFrame" name="frame_15">
         <property name="enabled">
